@@ -7,6 +7,9 @@ Bundle-ClassPath: net.oauth.jar
 Bundle-Vendor: 
 Export-Package: net.oauth,
  net.oauth.client,
+ net.oauth.client.httpclient3,
+ net.oauth.client.httpclient4,
+ net.oauth.http,
  net.oauth.server,
  net.oauth.signature
 Bundle-RequiredExecutionEnvironment: J2SE-1.5
